--- a/src/App.css
+++ b/src/App.css
@@ -3,48 +3,129 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* End Reset */
@@ -73,7 +154,7 @@ nav {
   font-size: 1.5vw;
   justify-content: space-between;
   padding: 1vw;
-	position: relative;
+  position: relative;
   top: 15vw;
   width: 50vw;
 }
@@ -89,16 +170,17 @@ nav {
 }
 
 .game-icon {
+  display: inline;
   height: 100%;
   width: auto;
-  display: inline;
 }
 
-.header-container, nav {
+.header-container,
+nav {
   left: 0;
   right: 0;
-  position: absolute;
   margin: auto;
+  position: absolute;
   text-align: center;
 }
 
@@ -112,13 +194,13 @@ nav {
   position: absolute;
   right: 30px;
   top: 70px;
-	z-index: 1;
+  z-index: 1;
 }
 
 .icon-label {
   font-size: 1.25vw;
-  vertical-align: top;
   margin-right: 13px;
+  vertical-align: top;
 }
 
 .large {
@@ -131,7 +213,7 @@ nav {
 }
 
 .pointer {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .subheader {
@@ -139,7 +221,7 @@ nav {
 }
 
 .youtube {
-	position: relative;
-	top: 0;
-	left: 0;
+  left: 0;
+  position: relative;
+  top: 0;
 }
